--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ Pillow==6.2.1
 requests==2.22.0
 requests-toolbelt==0.9.1
 urllib3==1.25.7
-gunicorn=20.0.4
-psycopg2-binary=2.8.4
+gunicorn==20.0.4
+psycopg2-binary==2.8.4
