--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Chrome Extension Svelte",
+    "name": "Programming Learning Resources",
     "options_page": "options.html",
     "background": {
         "page": "background.html"
